	PR c/39582 	* c-typeck.c (c_expr_sizeof_type): Create a C_MAYBE_CONST_EXPR 	with non-null C_MAYBE_CONST_EXPR_PRE if size of a variable-length 	type is an integer constant.

testsuite:
	* gcc.dg/vla-20.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146787 138bc75d-0d04-0410-961f-82ee72b054a4